Set comments to true on _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ yandex_metrica:
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
 disqus: septa97
-comments: false
+comments: true
 
 permalink: /:year/:month/:title
 
